# FT32

./: .gitignore  CMakeLists.txt  Kconfig  comment.md  prj.conf  readme.md  笔记.md
Projects/FT32F0xx_StdPeriph_Examples/USART/USART_HyperTerminalInterrupt/: main.c
Projects/FT32F0xx_StdPeriph_Examples/USART/USART_Printf/: main.c
Projects/FT32F0xx_StdPeriph_Templates/MDK-ARM/: JLinkLog.txt  Project.uvguix.Sunyuan Gong  Project.uvguix.chenxiaonian  Project.uvoptx  Project.uvprojx
Projects/FT32F0xx_StdPeriph_Templates/MDK-ARM/Listings/: FT32F0XX.map  startup_ft32f030x8.lst
Projects/FT32F0xx_StdPeriph_Templates/MDK-ARM/Objects/: FT32F0XX.axf  FT32F0XX.build_log.htm  FT32F0XX.hex  FT32F0XX.htm  FT32F0XX.lnp  Project_FT32F030X.dep  ft32f030x8_crc.d  ft32f030x8_crs.crf  ft32f030x8_crs.d  ft32f030x8_dac.crf  ft32f030x8_dbgmcu.crf  ft32f030x8_dbgmcu.d  ft32f030x8_flash.crf  ft32f030x8_gpio.d  ft32f030x8_i2c.crf  ft32f030x8_misc.d  ft32f030x8_pwr.d  ft32f030x8_spi.d  ft32f030x8_tim.d  ft32f030x8_usart.crf  ft32f030x8_usart.d  ft32f030xx_eval.crf  ft32f030xx_eval.d  ft32f030xx_eval_i2c_ee.crf  ft32f030xx_eval_i2c_ee.d  ft32f030xx_eval_lcd.crf  ft32f030xx_eval_lcd.d  ft32f0xx_adc.crf  ft32f0xx_adc.d  ft32f0xx_comp.crf  ft32f0xx_comp.d  ft32f0xx_crc.crf  ft32f0xx_crc.d  ft32f0xx_crs.crf  ft32f0xx_crs.d  ft32f0xx_dac.crf  ft32f0xx_dac.d  ft32f0xx_dbgmcu.crf  ft32f0xx_dbgmcu.d  ft32f0xx_dma.crf  (+35 more)
Projects/FT32F0xx_StdPeriph_Templates/SI/: Untitled Project.IAB  Untitled Project.IAD  Untitled Project.IMB  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.PRI  Untitled Project.PS  Untitled Project.SearchResults  Untitled Project.WK3
Projects/download/: main.c  readme.md  user_board.h
Projects/download/MDK-ARM/: JLinkLog.txt  Project.uvguix.Administrator  Project.uvguix.Tony Tang  Project.uvguix.chenkanuo  Project.uvoptx  Project.uvprojx
Projects/download/MDK-ARM/Listings/: FT32F0XX.map  startup_ft32f072xb.lst
Projects/download/MDK-ARM/Objects/: Project_FT32F030X.dep  ft32f030x8_adc.d  ft32f030x8_dac.d  ft32f030x8_dma.crf  ft32f030x8_exti.crf  ft32f030x8_gpio.crf  ft32f030x8_opa.crf  ft32f030x8_pwr.crf  ft32f030x8_rcc.crf  ft32f030x8_rcc.d  ft32f030x8_spi.crf  ft32f030x8_syscfg.d  ft32f030x8_tim.crf  ft32f030x8_wwdg.crf  (+27 more)
Projects/hand_mic/: board_config.h  main.c
Projects/hand_mic/MDK-ARM/: Project.uvoptx  Project.uvprojx
Projects/hand_mic/app/: bk953x_handler.c  button_handler.c  lcd_display_handler.c
Projects/meeting_machine_pro/: board_config.h  ft32f0XX_it.c  ft32f0XX_it.h  main.c  main_1.c  main_2.c  main_3c  user_board.h  产品功能操作说明.md
Projects/meeting_machine_pro/MDK-ARM/: JLinkLog.txt  Project.uvguix.chenxiaonian  Project.uvoptx  Project.uvprojx
Projects/meeting_machine_pro/app/: adc_button_handler.c  adc_button_handler.h  bk953x_handler.c  bk953x_handler.h  flash_handler.c  flash_handler.h  lcd_display_handler.c  lcd_display_handler.h
Utilities/FT32_EVAL/FT32f072X8_EVAL/: FT32F072X8_eval.C  FT32F072X8_eval.H
apps/app_common/: bk953x_handler.c
apps/app_common/LCD/: board_ht1621.c  board_ht1621.h  ht1621_display.c  ht1621_display.h
apps/app_common/LetterShell/: shell_custom_cmd.c
apps/app_common/trace/: trace.c
apps/app_common/usart/: ft_usart.c  ft_usart.h
apps/download/: app.hex  ft32f0.hex  fw_load.py  readme.md
apps/fct/: CMakeLists.txt  systick.c  systick.h
apps/fct/app/: main.c
apps/fct/config/: nrf_drv_config.h  user_board.h
apps/fct/gpio/: ft32f0xx_it.h  main.h
apps/fct/linker/: ft32f0.sct
apps/fct/shell/: main.c
apps/fct/timer/: ft32f0xx_it.c  ft32f0xx_it.h
apps/fct/uart/: ft32f0xx_it.c  main.c
apps/keil_proj/: CMakeLists.txt  version.h.in
apps/keil_proj/config/: app_config.h  debug_config.h  user_board.h  version.h
apps/keil_proj/gpio/: ft32f0xx_it.c  main.c
apps/keil_proj/timer/: main.c
apps/keil_proj/uart/: ft32f0xx_it.h  main.h
boards/: board_demo.h  board_swc11xs.h  boards.h
cmake/: board.cmake  extensions.cmake  git.cmake  kconfig.cmake  nrfjprog.cmake  openocd.cmake  platform.cmake  python.cmake  toolchain.cmake  version.cmake
cmake/platform/: ft32f03x.cmake  ft32f07x.cmake
cmake/sdk/: ft_sdk.cmake
cmake/toolchain/: armcc.cmake
develop_lib/: develop_lib.h  lib_error.h  util.h  草稿.md
develop_lib/ft_lib/: ft_lib.h
develop_lib/ft_lib/LetterShell/: shell_cfg.h  shell_cmd_list.c  shell_port.c  shell_port.h
develop_lib/ft_lib/adc/: ft_adc.c  ft_adc.h
develop_lib/ft_lib/common/: ft_delay.c  ft_delay.h
develop_lib/ft_lib/deprecated/: ft_delay.c
develop_lib/ft_lib/exit/: ft_exit.c  ft_exit.h
develop_lib/ft_lib/flash/: bsp_flash.c  bsp_flash.h  ft_flash.c
develop_lib/ft_lib/gpio/: ft_gpio.c  ft_gpio.h
develop_lib/ft_lib/i2c/: ft_i2c.c  ft_i2c.h
develop_lib/ft_lib/systick/: ft_systick.c  ft_systick.h
develop_lib/ft_lib/timer/: ft_timer.c  ft_timer.h
develop_lib/ft_lib/timer_pwm/: ft_timer_pwm.c  ft_timer_pwm.h
develop_lib/ft_lib/usart/: ft_usart.c  ft_usart.h  retarget.c
develop_lib/hardware/: hardware.h
develop_lib/hardware/bk953x/: BK使用笔记.md  bk953x.c  bk953x.h
develop_lib/hardware/ht1621/: ht1621.c  ht1621.h  seg_code.c  seg_code.h
develop_lib/hardware/st7789/: st7789.c
develop_lib/middle_api/: middle_api.h
develop_lib/middle_api/adc/: mid_adc.c  mid_adc.h
develop_lib/middle_api/delay/: mid_delay.c  mid_delay.h
develop_lib/middle_api/ir/: ir_rx_decode.c  ir_rx_decode.h  ir_tx_encode.c  ir_tx_encode.h  readme.md
develop_lib/middle_api/mid_bk953x/: mid_bk953x.c  mid_bk953x.h
develop_lib/middle_api/mid_flash/: mid_flash.c
develop_lib/middle_api/mid_systick/: mid_systick.h
develop_lib/middle_api/mid_timer/: mid_timer.c  mid_timer.h
develop_lib/middle_api/pwm/: mid_pwm.c
develop_lib/middle_api/tft_8080/: tft_8080.c
develop_lib/middle_api/trace/: trace.c  trace.h
develop_lib/third_lib/: third_lib.h
develop_lib/third_lib/app_scheduler/: app_scheduler.c  app_scheduler.h
develop_lib/third_lib/app_timer/: app_timer.h
scripts/: genSwdDfuPkg  max_stack_usage.sh
scripts/xls_to_txt/: ntc_temp.h  xls_to_txt.py
(+75 files in other folders)
